add dagster assets for entsoe

--- a/pipelines/workspace.yaml
+++ b/pipelines/workspace.yaml
@@ -1,3 +1,4 @@
 load_from:
   - python_module: dagster_omie.definitions
   - python_module: dagster_rte.definitions
+  - python_module: dagster_entsoe.definitions
