--- a/dbt_pipelines/dbt_project.yml
+++ b/dbt_pipelines/dbt_project.yml
@@ -23,3 +23,9 @@ models:
         +meta:
           dagster:
             group: "elia"
+      entsoe:
+        +materialized: "view"
+        +schema: "entsoe"
+        +meta:
+          dagster:
+            group: "entsoe"
