create transmission dbt asset group and add physical interchange multisource

--- a/dbt_pipelines/dbt_project.yml
+++ b/dbt_pipelines/dbt_project.yml
@@ -36,3 +36,9 @@ models:
         +meta:
           dagster:
             group: "be_historic_balances"
+    transmission:
+      +materialized: "view"
+      +schema: "transmission"
+      +meta:
+        dagster:
+          group: "transmission"
