add entsoe transmission assets

--- a/dbt_pipelines/models/scrapes/entsoe/models.yml
+++ b/dbt_pipelines/models/scrapes/entsoe/models.yml
@@ -5,3 +5,8 @@ models:
     config:
       materialized: table
   - name: entsoe_demand_clean
+  - name: entsoe_da_comex
+  - name: entsoe_da_total_comex
+  - name: entsoe_interchange_physical
+  - name: entsoe_historic_transmission
+
